--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ input {
     flex-direction: column;
     width: 100%;
     margin: 2em 0;
-    min-height: 417px;
+    min-height: 317px;
     border-radius: 10px;
     justify-items: center;
 }
@@ -155,8 +155,8 @@ input {
 
 .step-cards .card {
     display: flex;
+    flex-direction: row;
     width: 100%;
-    margin: 2em 0;
     min-height: 317px;
     border-radius: 10px;
 }
@@ -164,7 +164,7 @@ input {
 .card1,
 .card2,
 .card3 {
-
+    height: 190px;
     margin-right: 3%;
     width: 30%;
 
@@ -193,7 +193,7 @@ input {
 
 .project-cards {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: row;
 }
 
 .card {
@@ -232,14 +232,16 @@ input {
 }
 
 #cus-head {
-    width: 40%;
+    width: 100%;
     align-self: center;
     text-align: center;
 }
 
 .cus-div {
     display: flex;
+    flex-direction: row;
     width: 100%;
+    margin: 5% auto;
 }
 
 .cus-content {
@@ -420,6 +422,10 @@ input {
         margin: auto;
         height: 500px;
     }
+    #cushead{
+        width: 100%;
+       text-align: center;
+    }
 }
 
 @media only screen and (max-width: 860px) {
@@ -454,7 +460,7 @@ input {
     .no-count {
         margin: 0 15px;
     }
-
+    
 }
 
 @media only screen and (max-width: 650px) {
@@ -473,13 +479,59 @@ input {
         gap: 1.5em;
 
     }
+    .step-cards .card{
+        display: flex;
+        flex-direction: column;
+    }
 
     .card1,
     .card2,
     .card3 {
-        flex-wrap: wrap;
+        width: 100%;
 
     }
 
+    .project-cards{
+        display: flex;
+        flex-direction: column;
+    }
 
+    .card{
+        width: 80%;
+    }
+
+    .cus-div {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .cus-content {
+        width: 100%;
+    }
+
+    #cus-head {
+        width: 100%;
+        font-size: 1.5em;
+        align-self: center;
+        text-align: center;
+    }
+.cus-content h1{
+    font-size: 1.3em;
+}
+    .cus-img {
+        width: 100%;
+        margin: 3% 0;
+    }
+
+    #cus-img-img {
+        width: 100%;
+        height: 570px;
+    }
+
+    .foot-img img {
+        width: 100%;
+        height: 400px;
+    }
+    
 }
